--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -6,3 +6,11 @@
   volume  = 1,
   number  = 1
 }
+@article{Journal Papers1,
+  title = {Wide-bandgap semiconductors and power electronics as pathways to carbon neutrality},
+  author={Y. Zhang, D. Dong, Qiang Li, R. Zhang, F. Udrea, H. Wang},
+  journal = {Nature Review Electrical Engineering},
+  year    = 2025,
+  volume  = 2,
+  number  = 155-172
+}
